Fixed text alignment in chapters navbar

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -261,7 +261,9 @@ ol#anth_texts li.placeholder:before {
 	color: #ffffff;
 	background-color: #660248;
 }
-
+.nav-link{
+  align-items: normal;
+}
 /*.custom-select{
   display:none;
 }*/
